working_on_parsing_News_friends_and_groups_is_parsed_well_but_layout_is_bad

--- a/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
+++ b/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
@@ -492,7 +492,7 @@
         <scene sceneID="Qhh-5t-Y10">
             <objects>
                 <tableViewController id="KU8-Pu-1g2" customClass="VKNewsTableViewController" customModule="VKAppClone" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleAspectFit" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="k1J-w6-R3k">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="k1J-w6-R3k">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
